<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#dddddd">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsTitle"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:textSize="50dp"
            android:background="#cccccc"/>
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:alpha="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="20dp">
                <TextView
                    android:id="@+id/colorPathSettingTilte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/TitleSettingSize"
                    android:text="@string/EditPathColorTitle"/>

                <TextView
                    android:id="@+id/colorPathSettingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/EditPathColorText"
                    android:textSize="@dimen/TextSettingSize"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/colorPathSettingButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/color_palette"
                    android:background="@drawable/mybutton2"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:alpha="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="20dp">
                    <TextView
                        android:id="@+id/colorSideSettingTilte"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/TitleSettingSize"
                        android:text="@string/EditPathSideColorTitle"/>

                    <TextView
                        android:id="@+id/colorSideSettingText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/EditPathSideColorText"
                        android:textSize="@dimen/TextSettingSize"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/colorSideSettingButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/color_palette"
                    android:background="@drawable/mybutton2"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:alpha="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="20dp">
                    <TextView
                        android:id="@+id/colorBallSettingTilte"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/TitleSettingSize"
                        android:text="@string/EditBallColorTitle"/>

                    <TextView
                        android:id="@+id/colorBallSettingText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/EditBallColorText"
                        android:textSize="@dimen/TextSettingSize"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/colorBallSettingButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/color_palette"
                    android:background="@drawable/mybutton2"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>

            </LinearLayout>

            </LinearLayout>

        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#cccccc"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:gravity="center">
            <Button
                android:id="@+id/validerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/validerTextButton"
                android:textColor="#dddddd"
                android:background="@drawable/mybutton2"
                android:layout_marginRight="10dp"
                />
            <Button
                android:id="@+id/retablirButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/retablirTextButton"
                android:textColor="#dddddd"
                android:background="@drawable/mybutton2"
                />
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/returnButton"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:src="@drawable/previous"
        android:background="@drawable/mybutton2"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        />
</RelativeLayout>