<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dddddd">


        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_weight="0.3">
            <TextView
                android:id="@+id/titletop"
                android:gravity="center"
                android:textSize="50dp"
                android:text="@string/titletop"
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="20dp"
                android:id="@+id/titlebot"
                android:gravity="center"
                android:textSize="45dp"
                android:text="@string/titlebot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/starView"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:visibility="invisible"
                android:src="@drawable/star"/>
            <TextView
                android:id="@+id/lastScore"
                android:gravity="center"
                android:textSize="45dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/score"
                android:gravity="center"
                android:textSize="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>
        <LinearLayout
            android:gravity="top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
        <Button
            android:background="@drawable/mybutton"
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:textColor="#dddddd"
            android:text="@string/playButton"
            android:textSize="60dp" />
            <LinearLayout
                android:paddingTop="3dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">
                <ImageButton
                    android:id="@+id/rankButton"
                android:padding="10dp"
                android:layout_marginRight="3dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:src="@drawable/rank"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>
                <ImageButton
                    android:id="@+id/settingsButton"
                android:padding="10dp"
                android:layout_marginRight="3dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:src="@drawable/settings"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                />

                <ImageButton
                    android:id="@+id/aboutButton"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:src="@drawable/question"
                android:padding="10dp"
                android:scaleType="fitCenter"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
